include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libxml.la

noinst_HEADERS = \
                 xmlwriter.h \
                 gffdumper.h \
                 $(EMPTY)

libxml_la_SOURCES = \
                    xmlwriter.cpp \
                    gffdumper.cpp \
                    $(EMPTY)
