include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libxml.la

noinst_HEADERS = \
                 xmlwriter.h \
                 gffdumper.h \
                 gff3dumper.h \
                 gff4dumper.h \
                 gff4fields.h \
                 $(EMPTY)

libxml_la_SOURCES = \
                    xmlwriter.cpp \
                    gffdumper.cpp \
                    gff3dumper.cpp \
                    gff4dumper.cpp \
                    $(EMPTY)
