include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libxml.la

noinst_HEADERS = \
                 xmlwriter.h \
                 xmlparser.h \
                 gffdumper.h \
                 gff3dumper.h \
                 gff4dumper.h \
                 gff4fields.h \
                 tlkdumper.h \
                 tlkcreator.h \
                 $(EMPTY)

libxml_la_SOURCES = \
                    xmlwriter.cpp \
                    xmlparser.cpp \
                    gffdumper.cpp \
                    gff3dumper.cpp \
                    gff4dumper.cpp \
                    tlkdumper.cpp \
                    tlkcreator.cpp \
                    $(EMPTY)
